Add support for fetching place details